--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Jon Collier, MRT(R)</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">David Hocking (MBBS)</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">David Hocking, MBBS</a>
                   </span>
                   </div>
 
