--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Robarts Research Institute – Medical Biophysics – London Health Sciences – Western University<br><b>"The Power of Augmented Reality in the IR Suite"</b></span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>WARP – Emerged from the VASST Lab (Virtual Augmentation and Simulation for Surgery and Therapy Lab)</small></span>
+                    <span class="eql-cntrb"><small><br><sup></sup>WARP – Emerged from the VASST Lab (Virtual Augmentation and Simulation for Surgery and Therapy Lab)</small></span>
                   </div>
 
                   <div class="column has-text-centered">
