--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
+        <source src="Image_Guided_Intervention_Video(VASSTLab).gif"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Image-guided intervention (IQI) refers to the use of medical imaging to guide and assist minimally invasive procedures of surgeries. Advanced tools are being explored including 3D reconstruction, overlay guidance, road mapping, and electromagnetic tracking.
+        <b>Image-Guided Intervention (IGI)</b> refers to the use of medical imaging to guide and assist minimally invasive procedures of surgeries. Advanced tools are being explored including 3D reconstruction, overlay guidance, road mapping, and electromagnetic tracking.
       </h2>
     </div>
   </div>
