--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="Image_Guided_Intervention_Video(VASSTLab).gif"
+        <source src="Image_Guided_Intervention_Video(VASSTLab).gif.gif"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
