--- a/index.html
+++ b/index.html
@@ -123,6 +123,24 @@
 </section>
 
 
+<!-- WARP abstract -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">WARP</h2>
+        <div class="content has-text-justified">
+          <p>
+            <img src="static/images/WARP_Logo.png">
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End WARP abstract -->
+        
+  
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
