--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">WARP</h2>
+        <h2 class="title is-3"></h2>
         <div class="content has-text-justified">
           <p>
             <img src="static/images/WARP_Logo.png">
+            <img src="static/images/WARP_Information.png">
           </p>
         </div>
       </div>
