--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://www.robarts.ca/<ROBARTS>.ca" target="_blank"
+                        <a href="https://www.robarts.ca/" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
