--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Robarts</span>
+                        <span>Robarts Research Institute</span>
                       </a>
                     </span>
 
@@ -90,6 +90,17 @@
                         <i class="fas fa-file-pdf"></i>
                       </span>
                       <span>Schulich Medicine</span>
+                    </a>
+                  </span>
+
+                    <!-- Supplementary PDF link -->
+                    <span class="link-block">
+                      <a href="https://www.lhsc.on.ca/" target="_blank"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-file-pdf"></i>
+                      </span>
+                      <span>London Health Sciences</span>
                     </a>
                   </span>
 
