--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">WARP 1</h2>
+      <h2 class="title is-3">WARP 1 - Illustration</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
@@ -226,7 +226,7 @@
 <section class="hero is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">WARP 1</h2>
+      <h2 class="title is-3">WARP 2 - Interrogation</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
