--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">WARP</h2>
-        <h2 class="title is-4">(Western Augmented Reality Program)</h2>
+        <h2 class="title is-5">(Western Augmented Reality Program)</h2>
         <div class="content has-text-justified">
           <p>
           </p>
@@ -291,9 +291,7 @@
         <div class="content">
 
           <p>
-            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>.
-            You are free to borrow the of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>.
+            WARP (Western Augmented Reality Program) from the Laboratory for Virtual Augmentation and Simulation for Surgery and Therapy Lab (VASST Lab) of the Robarts Research Institute at Western University.
           </p>
 
         </div>
