--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">WARP</h2>
-        <h2 class="title is-5">(Western Augmented Reality Program)</h2>
+        <h2 class="title is-4">Western Augmented Reality Program</h2>
         <div class="content has-text-justified">
           <p>
           </p>
