--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">WARP</h2>
-        <h2 class="title is-4">Western Augmented Reality Program</h2>
+        <h2 class="title is-6">Western Augmented Reality Program</h2>
           <p>
           </p>
         </div>
@@ -207,13 +207,6 @@
             type="video/mp4">
           </video>
         </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
       </div>
     </div>
   </div>
@@ -254,33 +247,66 @@
 </section>
 <!-- End video carousel -->
 
-
-
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
+  
+<!-- Video carousel 3 -->
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
+      <h2 class="title is-3">WARP 3 - Intervention</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-video1">
+          <video poster="" id="video1" autoplay controls muted loop height="100%">
+            <!-- Your video file here -->
+            <source src="static/videos/WARP_3_Video1.mp4"
+            type="video/mp4">
+          </video>
+        </div>
       </div>
     </div>
-  </section>
-<!--End paper poster -->
-
-
-<!--BibTex citation -->
-  <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
-      <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
-    </div>
+  </div>
 </section>
-<!--End BibTex citation -->
+<!-- End video carousel -->
+
+
+<!-- Paper abstract -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+          <p>
+            <img src="static/images/WARP_Logo.png">
+          </p>
+      </div>
+    </div>
+  </div>
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_Future_Image1.png" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_Future_Image2.png" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_Future_Image3.png" alt="MY ALT TEXT"/>
+     </div>
+    <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_Future_Image4.png" alt="MY ALT TEXT"/>
+     </div>
+     <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_Future_Image5.png" alt="MY ALT TEXT"/>
+     </div>
+  </div>
+</div>
+</div>
+</section>
+<!-- End paper abstract -->
 
 
   <footer class="footer">
@@ -290,7 +316,7 @@
         <div class="content">
 
           <p>
-            WARP (Western Augmented Reality Program) from the Laboratory for Virtual Augmentation and Simulation for Surgery and Therapy Lab (VASST Lab) of the Robarts Research Institute at Western University.
+            WARP (Western Augmented Reality Program) is developed by the "Laboratory for Virtual Augmentation and Simulation for Surgery and Therapy" (VASST Lab) of the Robarts Research Institute at Western University.
           </p>
 
         </div>
