--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">WARP</h2>
-        <h2 class="title is-6">Western Augmented Reality Program</h2>
+        <h2 class="title is-3">Western Augmented Reality Program: WARP</h2>
           <p>
           </p>
         </div>
