--- a/index.html
+++ b/index.html
@@ -252,18 +252,17 @@
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">WARP 3 - Intervention</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/WARP_3_Video1.mp4"
-            type="video/mp4">
-          </video>
+        <video poster="" id="tree" autoplay controls muted loop height="100%">
+                <!-- Your video here -->
+                <source src="static/videos/WARP_3_Video1.mp4"
+                type="video/mp4">
+              </video>
         </div>
       </div>
     </div>
   </div>
 </section>
+  
 <!-- End video carousel -->
 
 
