--- a/index.html
+++ b/index.html
@@ -124,6 +124,74 @@
           <p>
             <img src="static/images/WARP_Logo.png">
           </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End WARP abstract -->
+
+
+<!-- LIDD Photos Part 1 (Demo 2023) -->
+<section class="section hero is-light">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo1.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo2.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo3.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo4.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo5.jpg" alt="MY ALT TEXT"/>
+        </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo6.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo7.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo8.jpg" alt="MY ALT TEXT"/>
+    </div>
+  </div>
+</div>
+</div>
+    <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+          <p>
+            <img src="static/images/WARP_Logo.png">
+          </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End LIDD Photos (Demo 2023) -->
+
+  
+<!-- WARP 123 Sections -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3"></h2>
+        <div class="content has-text-justified">
           <p>
             <img src="static/images/WARP_Information.png">
           </p>
@@ -133,8 +201,8 @@
   </div>
 </section>
 <!-- End WARP abstract -->
-        
-  
+
+
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
@@ -306,7 +374,59 @@
 </section>
 <!-- End paper abstract -->
 
+<!-- LIDD Photos Part 2 (Lecture 2023) -->
+<section class="section hero is-light">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo9.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo10.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo11.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo12.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo13.jpg" alt="MY ALT TEXT"/>
+        </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo14.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo15.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo16.jpg" alt="MY ALT TEXT"/>
+    </div>
+  </div>
+</div>
+</div>
+    <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+          <p>
+            <img src="static/images/WARP_Logo.png">
+          </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End LIDD Photos (Lecture 2023) -->
 
+  
   <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
