--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_Image1.png" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_Image1.png" width="200" height="100" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
