--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo1.jpg" width="100" height="100" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo2.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo2.jpg" width="100" height="100" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
