--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 <!-- End WARP abstract -->
 
 
+  
 <!-- LIDD Photos Part 1 (Demo 2023) -->
 <section class="section hero is-light">
   <div class="hero-body">
@@ -139,15 +140,15 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo2.jpg" width="3800" height="1000" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo2.jpg" width="3800" height="500" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo3.jpg" width="3800" height="1000" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo3.jpg" width="3800" height="500" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo9.jpg" width="3800" height="1000" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo9.jpg" width="3800" height="500" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
@@ -161,7 +162,6 @@
         <!-- Your image here -->
         <img src="static/images/WARP_LIDD_photo7.jpg" alt="MY ALT TEXT"/>
       </div>
-      <div class="item">
     </div>
   </div>
 </div>
@@ -346,16 +346,6 @@
     </div>
   </div>
 </div>
-</div>
-    <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-          <p>
-            <img src="static/images/WARP_Logo.png">
-          </p>
-      </div>
-    </div>
-  </div>
 </section>
 <!-- End paper abstract -->
 
@@ -375,6 +365,18 @@
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/WARP_LIDD_photo4.jpg" alt="MY ALT TEXT"/>
+      </div>
+            <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo14.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo15.jpg" alt="MY ALT TEXT"/>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/WARP_LIDD_photo16.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
