--- a/index.html
+++ b/index.html
@@ -126,29 +126,27 @@
           </p>
         </div>
       </div>
-    </div>
-  </div>
 </section>
 <!-- End WARP abstract -->
 
 
   
 <!-- LIDD Photos Part 1 (Demo 2023) -->
-<section class="section hero is-light">
+<section class="section hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo2.jpg" width="1800" height="300" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo2.jpg" width="800" height="300" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo3.jpg" width="1800" height="300" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo3.jpg" width="800" height="300" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo9.jpg" width="1800" height="300" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo9.jpg" width="800" height="300" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
@@ -346,7 +344,7 @@
 <!-- End paper abstract -->
 
 <!-- LIDD Photos Part 2 (Lecture 2023) -->
-<section class="section hero is-light">
+<section class="section hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
