--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo2.jpg" width="800" height="300" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo2.jpg" width="800" height="300" align=”center” alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
