--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       <div id="results-carousel" class="carousel results-carousel">
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo14.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo14.jpg" width="800" height="200" align=”center” alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
@@ -361,7 +361,7 @@
       </div>
              <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo13.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
@@ -369,7 +369,7 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo4.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo17.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
@@ -377,7 +377,7 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo13.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo1.jpg" alt="MY ALT TEXT"/>
         </div>
       <div class="item">
         <!-- Your image here -->
@@ -389,7 +389,7 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo16.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/WARP_LIDD_photo4.jpg" alt="MY ALT TEXT"/>
     </div>
   </div>
 </div>
