--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo2.jpg" width="800" height="300" align=”center” alt="MY ALT TEXT"/>
+        <img align="center" width="800" height="300" src="static/images/WARP_LIDD_photo2.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo3.jpg" width="800" height="300" alt="MY ALT TEXT"/>
+        <img align="center" width="800" height="300" src="static/images/WARP_LIDD_photo3.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo9.jpg" width="800" height="300" alt="MY ALT TEXT"/>
+        <img align="center" width="800" height="300" src="static/images/WARP_LIDD_photo9.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
@@ -349,7 +349,7 @@
       <div id="results-carousel" class="carousel results-carousel">
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo14.jpg" width="800" height="200" align=”center” alt="MY ALT TEXT"/>
+        <img align="center" width="800" height="200" src="static/images/WARP_LIDD_photo14.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
