--- a/index.html
+++ b/index.html
@@ -137,15 +137,21 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img align="center" width="800" height="300" src="static/images/WARP_LIDD_photo2.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="300" src="static/images/WARP_LIDD_photo2.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img align="center" width="800" height="300" src="static/images/WARP_LIDD_photo3.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="300" src="static/images/WARP_LIDD_photo3.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img align="center" width="800" height="300" src="static/images/WARP_LIDD_photo9.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="300" src="static/images/WARP_LIDD_photo9.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
