--- a/index.html
+++ b/index.html
@@ -155,11 +155,15 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo5.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="300" src="static/images/WARP_LIDD_photo5.jpg" alt="MY ALT TEXT"/>
+        </p>
         </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo7.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="300" src="static/images/WARP_LIDD_photo7.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
     </div>
   </div>
@@ -355,47 +359,69 @@
       <div id="results-carousel" class="carousel results-carousel">
       <div class="item">
         <!-- Your image here -->
-        <img align="center" width="800" height="200" src="static/images/WARP_LIDD_photo14.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo14.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo15.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo15.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo16.jpg" alt="MY ALT TEXT"/>
-      </div>
-             <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo13.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo16.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo10.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo13.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo17.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo10.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo12.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo17.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo1.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo12.jpg" alt="MY ALT TEXT"/>
+        </p>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo1.jpg" alt="MY ALT TEXT"/>
+        </p>
         </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo11.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo11.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo15.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo15.jpg" alt="MY ALT TEXT"/>
+        </p>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/WARP_LIDD_photo4.jpg" alt="MY ALT TEXT"/>
+        <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo4.jpg" alt="MY ALT TEXT"/>
+        </p>
     </div>
   </div>
 </div>
