--- a/index.html
+++ b/index.html
@@ -406,6 +406,12 @@
       <div class="item">
         <!-- Your image here -->
         <p align="center">
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo6.jpg" alt="MY ALT TEXT"/>
+        </p>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <p align="center">
           <img width="800" height="200" src="static/images/WARP_LIDD_photo4.jpg" alt="MY ALT TEXT"/>
         </p>
       </div>
@@ -414,11 +420,10 @@
         <p align="center">
           <img width="800" height="200" src="static/images/WARP_LIDD_photo11.jpg" alt="MY ALT TEXT"/>
         </p>
-      </div>
       <div class="item">
         <!-- Your image here -->
         <p align="center">
-          <img width="800" height="200" src="static/images/WARP_LIDD_photo15.jpg" alt="MY ALT TEXT"/>
+          <img width="800" height="200" src="static/images/WARP_LIDD_photo18.jpg" alt="MY ALT TEXT"/>
         </p>
     </div>
   </div>
