--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
         <p align="center">
           <img width="800" height="200" src="static/images/WARP_LIDD_photo11.jpg" alt="MY ALT TEXT"/>
         </p>
+      </div>
       <div class="item">
         <!-- Your image here -->
         <p align="center">
